Changing Search Match color changes the outline color of selected modifier #83988

Closed
opened 2020-12-20 18:23:18 +01:00 by Simon Sommer · 9 comments

Operating system: Win 10
Graphics card: AMD Radeon RX 570

Broken: 2.92, 42b0389a9b05, geometry-nodes, 2020-12-17; 2.92, 478ba53270, master, 2020-12-20

Changing the Search Match color in the theme settings changes the outline color of the selected modifier.

In the Preferences go to Themes>Properties>Search Match and change the color.

match color bug.blend

blender_search_match_color_bug.mp4

Operating system: Win 10 Graphics card: AMD Radeon RX 570 Broken: 2.92, 42b0389a9b05, geometry-nodes, 2020-12-17; 2.92, 478ba532700f, master, 2020-12-20 Changing the Search Match color in the theme settings changes the outline color of the selected modifier. In the Preferences go to Themes>Properties>Search Match and change the color. [match color bug.blend](https://archive.blender.org/developer/F9519613/match_color_bug.blend) [blender_search_match_color_bug.mp4](https://archive.blender.org/developer/F9519615/blender_search_match_color_bug.mp4)
Author

Added subscriber: @CreatorSiSo

Added subscriber: @CreatorSiSo
Author

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Aha, I guess it was just a matter of time before we got this report. We sort of just postponed the decision of a proper theme color here and reused the search match color.

Aha, I guess it was just a matter of time before we got this report. We sort of just postponed the decision of a proper theme color here and reused the search match color.
Author

Ok I just played bit with the theme settings and found this a bit strange.

Ok I just played bit with the theme settings and found this a bit strange.
Hans Goudey self-assigned this 2020-12-28 06:54:55 +01:00

This issue was referenced by 71cb6923f5

This issue was referenced by 71cb6923f5073d4d1ca629f1299cfe251f8a611d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Oh nice, I never noticed that this was fixed. Thanks Hans :)

Oh nice, I never noticed that this was fixed. Thanks Hans :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83988
No description provided.